--- a/index.html
+++ b/index.html
@@ -101,6 +101,10 @@
                         </span>                            
                         </div>
 
+                        <div style="color: red;">
+                            Accepted by IEEE Robotics and Automation Letters (RA-L)
+                        </div>
+
                         <div class="column has-text-centered">
                             <div class="publication-links">
                                         <!-- Arxiv PDF link -->
