--- a/index.html
+++ b/index.html
@@ -564,14 +564,17 @@
         <section class="section" id="BibTeX">
             <div class="container is-max-desktop content">
                 <h2 class="title is-2">Citation</h2>
-<pre><code>@misc{feng2022s3e,
-    title={S3E: A Multi-Robot Multimodal Dataset for Collaborative SLAM},
-    author={Dapeng Feng and Yuhua Qi and Shipeng Zhong and Zhiqiang Chen and Qiming Chen and Hongbo Chen and Jin Wu and Jun Ma},
-    year={2022},
-    eprint={2210.13723},
-    archivePrefix={arXiv},
-    primaryClass={cs.RO}
-}</code></pre>
+<pre><code>@ARTICLE{feng2024s3e,
+    author={Feng, Dapeng and Qi, Yuhua and Zhong, Shipeng and Chen, Zhiqiang and Chen, Qiming and Chen, Hongbo and Wu, Jin and Ma, Jun},
+    journal={IEEE Robotics and Automation Letters}, 
+    title={S3E: A Multi-Robot Multimodal Dataset for Collaborative SLAM}, 
+    year={2024},
+    volume={},
+    number={},
+    pages={1-8},
+    keywords={Multi-Robot SLAM;Data Sets for SLAM;SLAM},
+    doi={10.1109/LRA.2024.3490402}
+}  </code></pre>
             </div>
         </section>
         <!--End BibTex citation -->
